sources/easygenerator.Web/Templates/Reader/css/themes/light.css
/* ... */
.text-404 .page-not-found-title {
  color: #e05f5f;
  font-size: 24px;
  text-transform: uppercase;
  margin: 20px auto;
}
.text-404 .page-404-hint {
  color: #777777;
  font-size: 16px;
  margin: 20px auto;
  font-family: Roboto Slab;
}
.styled-content {
  /*#region CURATION*/
  /*#endregion CURATION*/
  word-wrap: break-word;
  font-family: Roboto Slab;
  font-size: 18px;
  color: #42515f;
  line-height: 1.5;
}
.styled-content .link-curation-block {
  min-height: 72px;
}
.styled-content .content-inner-wrapper {
  padding: 14px 0;
  margin: 20px 0 0;
  border-top: 1px solid rgba(34, 34, 34, 0.1);
  border-bottom: 1px solid rgba(34, 34, 34, 0.1);
}
.styled-content .content-inner-wrapper .text-wrapper {
  display: table-cell;
  width: 600px;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block {
  float: left;
  width: 100%;
  height: 97px;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-title.parsed {
  text-decoration: none;
  height: 27px;
  font-size: 1em;
  overflow: hidden;
  margin-bottom: 8px;
  display: inline-block;
  white-space: normal;
  vertical-align: middle;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-title.parsed:hover {
  text-decoration: underline;
  cursor: pointer;
  cursor: hand;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-title.empty {
  background-color: rgba(34, 34, 34, 0.1);
  width: 40%;
  height: 5px;
  margin-top: 10px;
  border-radius: 3px;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-content {
  overflow: hidden;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-content.parsed {
  height: 46px;
  margin-bottom: 5px;
  line-height: 23px;
  overflow: hidden;
  font-size: .8em;
  color: #42515f;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-content.empty {
  margin-top: 20px;
  width: 70%;
  height: 25px;
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-content.empty:before {
  content: '';
  width: 80%;
  display: block;
  height: 5px;
  border-radius: 3px;
  background-color: rgba(34, 34, 34, 0.1);
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.link-content.empty:after {
  content: '';
  margin-top: 10px;
  display: block;
  width: 60%;
  height: 5px;
  border-radius: 3px;
  background-color: rgba(34, 34, 34, 0.1);
}
.styled-content .content-inner-wrapper .text-wrapper .text-block div.custom-description * {
  margin-bottom: 5px !important;
}
.styled-content .content-inner-wrapper .text-wrapper .static-link-present {
  width: 60%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  position: relative;
  color: rgba(66, 81, 95, 0.7);
  bottom: -3px;
}
.styled-content .content-inner-wrapper .text-wrapper .static-link-present .link-url {
  text-decoration: none;
  padding-left: 20px;
  background: url(css/img/linkArrow.png) no-repeat scroll 0;
  background-position-y: center;
  font-size: 13px;
  color: rgba(66, 81, 95, 0.7);
}
.styled-content .content-inner-wrapper .text-wrapper .static-link-present .link-url:hover {
  text-decoration: underline;
}
.styled-content .content-inner-wrapper div.images {
  float: left;
  width: 205px;
  height: 123px;
}
.styled-content .content-inner-wrapper div.images.parsed {
  margin-right: 15px;
  border-radius: 4px;
  overflow: hidden;
  position: relative;
  background-color: rgba(34, 34, 34, 0.1);
}
.styled-content .content-inner-wrapper div.images.deleted {
  display: none;
}
.styled-content .content-inner-wrapper div.images .image-wrapper * {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  height: auto;
  max-width: 203px;
  max-height: 123px;
  border-radius: 3px;
}
.styled-content:first-of-type {
  margin-top: 30px;
}
.styled-content:not(:last-child) {
  margin-bottom: 50px;
}
.styled-content p:not(:last-child) {
  margin-bottom: 15px;
}
.styled-content a {
  color: #43aaa3;
  text-decoration: underline;
  cursor: pointer;
}
.styled-content a:hover {
  color: #3c9993;
}
.styled-content h1 {
  font-size: 24px;
  font-weight: 700;
}
.styled-content h1:not(:last-child) {
  margin-bottom: 15px;
}
.styled-content h2 {
  font-size: 22px;
  font-weight: 700;
  text-transform: none;
}
.styled-content h2:not(:last-child) {
  margin-bottom: 15px;
}
.styled-content h3 {
  font-size: 20px;
  font-weight: 700;
  text-transform: none;
}
.styled-content h3:not(:last-child) {
  margin-bottom: 15px;
}
.styled-content cite {
  border-left-style: solid;
  border-left-width: 4px;
  border-left-color: #43aaa3;
  display: block;
  padding-left: 18px;
  margin: 20px 0 20px 10px;
  max-width: 85%;
}
.styled-content mark {
  background-color: #43aaa3;
  color: #fff;
}
.styled-content .table-wrapper table {
  margin: 20px;
  text-align: left;
  table-layout: fixed;
  font-size: 16px;
  border: none;
  border-collapse: collapse;
  display: inline-table;
  color: #222222;
}
.styled-content .table-wrapper table caption {
  margin: 15px;
}
.styled-content .table-wrapper table tbody {
  opacity: .9;
  font-size: 16px;
}
.styled-content .table-wrapper table tbody th {
  font-family: Roboto Condensed;
  color: #3c3c3c;
  font-weight: 400;
}
.styled-content .table-wrapper table tbody td {
  background-color: #f3f3f3;
}
.styled-content .table-wrapper table thead {
  opacity: .9;
  font-size: 16px;
  font-family: Roboto Condensed;
}
.styled-content .table-wrapper table thead th {
  background: #76cbe3;
  font-weight: 700;
}
.styled-content .table-wrapper table thead + caption + tbody tr:first-child td,
.styled-content .table-wrapper table thead + caption + tbody tr:first-child th {
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 5px, #f4fafc 0px, #f4fafc 100%);
}
/* ... */

